--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vueuse/core": "^10.6.1",
     "ant-design-vue": "^4.0.7",
     "vue": "^3.3.8",
     "vue-i18n": "^9.8.0",
-    "vue-router": "^4.2.5",
-    "@vueuse/core": "^10.6.1"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.3.0",
+    "vite": "^5.0.0"
   }
 }
